# web_stock_checker

./: Cargo.toml  README.md
src/: mailer.rs  main.rs  scraper.rs  site.rs  trim.rs
