[package]
name = "web_stock_checker"
version = "0.1.0"
authors = ["Ray Kochenderfer <35624960+GimpFlamingo@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.0"}
select = "0.5.0"
scraper = "0.12.0"
lazy_static = "1.4.0"
tokio = { version = "1.1.0", features = ["full"]}
dotenv = "0.15.0"
sendgrid = { version = "0.16.0", features = ["async"]}